# monad

./: README.md  TODO.org  cross-i686.txt  meson.build
src/: boot.asm  cursor.c  cursor.h  font.c  font.h  framebuffer.c  framebuffer.h  interrupts.asm  kernel.c  kernel_entry.asm  keyboard.c  keyboard.h  linker.ld  timer.c  timer.h  vesa.c  vesa.h  vga.c  vga.h
src/LNLISP/: lnlisp.c  sexparser.c
src/libc/: math.c  math.h
src/monad/: grammar.org  monad.c  monad.h  sexparser.h
src/monad/tests/: c-hello-world.mon  hello-world.mon
